--- a/index.css
+++ b/index.css
@@ -230,7 +230,7 @@ footer .glyphicon {
     margin: 0px 20px 0px 20px;      
 }
 .margin-img {
-    margin-top: 80px; 
+    margin-top: 100px !important; 
 }
 .max-size {
     max-height: 300px;
